<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="HumanChoice">Human Choice</string>
    <string name="ComputerChocie">Computer Choice</string>
    <string name="Score">Score: Human</string>
    <string name="Score1">Score: Human 0 Computer 0</string>
    <string name="Rock">Rock</string>
    <string name="Paper">Paper</string>
    <string name="Scissors">Scissors</string>
</resources>